--- a/theFirstMeetingsOfReact/input_echo.html
+++ b/theFirstMeetingsOfReact/input_echo.html
@@ -14,8 +14,35 @@
 
 <script type="text/babel">
 
+    var ShowEditor = React.createClass({
 
+        getInitialState:function(){
+            return {value:"你可以在这里输入文字"};
+        },
 
+        handleChange:function(){
+          this.setState({value:ReactDOM.findDOMNode(this.refs.textarea).value});
+        },
+
+        render:function(){
+          return (
+                  <div>
+                          <h3>输入</h3>
+                          <textarea style={{width:300, height:150, outline:'none'}}
+                                onChange={this.handleChange}
+                                ref6="textarea"
+                                defaultValue={this.state.value} />
+
+                          <h3>输出</h3>
+                          <div>
+                                {this.state.value}
+                          </div>
+                  </div>
+          );
+        },
+    });
+
+    ReactDOM.render(<ShowEditor/>,document.getElementById("div01"));
 </script>
 
 </body>
