--- a/theFirstMeetingsOfReact/input_echo.html
+++ b/theFirstMeetingsOfReact/input_echo.html
@@ -30,7 +30,7 @@
                           <h3>输入</h3>
                           <textarea style={{width:300, height:150, outline:'none'}}
                                 onChange={this.handleChange}
-                                ref6="textarea"
+                                ref="textarea"
                                 defaultValue={this.state.value} />
 
                           <h3>输出</h3>
